# YoloSkin

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh-CN.md  docker-compose.yml
crates/entity/: Cargo.toml
crates/entity/src/: audit_logs.rs  closet_items.rs  join_sessions.rs  lib.rs  players.rs  premium_bindings.rs  site_settings.rs  textures.rs  users.rs  yggdrasil_keys.rs  yggdrasil_tokens.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20250101_000001_create_users_table.rs  m20250101_000002_create_players_table.rs  m20250101_000003_create_textures_table.rs  m20250101_000004_create_closet_items_table.rs  m20250101_000005_create_premium_bindings_table.rs  m20250101_000006_create_audit_logs_table.rs  m20250101_000007_create_site_settings_table.rs  m20250101_000008_create_yggdrasil_tables.rs  m20260209_000009_add_unique_player_name_index.rs  m20260209_000010_add_oauth_columns_to_site_settings.rs  (+1 more)
crates/server/: Cargo.toml
crates/server/src/: admin.rs  app_state.rs  auth.rs  closet.rs  config.rs  main.rs  players.rs  premium.rs  response.rs  routes.rs  session.rs  textures.rs  yggdrasil.rs
crates/server/src/routes/: api.rs  public.rs  static_files.rs
web/: README.md  next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: auth-card.tsx  category-filter.tsx  data-table.tsx  featured-skin.tsx  footer.tsx  hero-section.tsx  language-switch.tsx  navbar.tsx  player-select.tsx  skin-card.tsx  skin-viewer.tsx  state-views.tsx  texture-upload.tsx  viewer-panel.tsx
(+27 files in other folders)
