[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = "1.0"
entity = { path = "../entity" }
migration = { path = "../migration" }
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
thiserror = "1"
argon2 = "0.5"
dotenvy = "0.15"
chrono = "0.4"
base64 = "0.22"
hex = "0.4"
rsa = { version = "0.9", features = ["sha1", "pkcs5"] }
sha1 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
urlencoding = "2"
